# lconrg

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.MD  README.rst  coverage.xml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt  reference.rst.txt
src/lconrg/: <ipython-input-452-7d8209a0f5af>  __init__.py  factors.py  lconrg.py  price_forecast.py
tests/: test_lconrg.py
