[tool.poetry]
name = "lconrg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"
pytest-cov = "^2.12.1"
mypy = "^0.910"
pytest-mock = "^3.6.1"
flake8 = "^3.9.2"
black = "^21.9b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
flake8-black = "^0.2.3"
pytype = {version = "^2021.9.9", python = "3.9"}
flake8-annotations = "^2.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
