[tool.poetry]
name = "lconrg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.22"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest-cov = "^2.12.1"
mypy = "^0.910"
pytest-mock = "^3.6.1"
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^21.9.1"
flake8-import-order = "^0.18.1"
flake8-black = "^0.3.6"
pytype = { version = "^2021.9.9", python = "3.9" }
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
ipython = "^8.1.1"
python-dateutil = "^2.8.2"
pandas = "^1.4.1"
darglint = "^1.8.1"
xdoctest = "^1.1.0"
Sphinx = "^5.3.0"
sphinx-autodoc-typehints = "^1.19.5"
pandas-stubs = "^2.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
